src/test/deca/context/valid/created/miscellaneous/float_int.deca
// Description :
//    test cast entre un float et int
//
// Resultats :
//		Ok
	

class A {}
{
(float)(1);
}
