src/test/deca/context/invalid/created/binary_exp/op_comp/neq_float_A.deca
// Description :
//    test neq entre un float et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type float, A, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)
class A{}
{
float a;
A b;
boolean c = a != b;
}
